tests/compile_failures/b64_in_hex.rs
use splitbits::*;

fn main() {
    let a = 0b11;
    let b = true;
    let c = false;
    let d = 0b01;
    let e = 0b1111_0000;
    combinehex!("ddAB cCbb bDEF aaH1 XY45 6789 eeee eeee");
}
